# tok_embed_nnmf_api

./: app.py  csc_codes.npz  csr_codes.npz  faster.ipynb  pyproject.toml  requirements.txt
sparse_backend/: __init__.py  codes_queries.py  error_handlers.py  rendering.py
