[tool.poetry]
name = "sparse-backend"
version = "0.1.0"
description = ""
authors = ["Noa Nabeshima <noanabeshima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
torch = "^2.0.1"
scipy = "^1.11.3"
flask = "^2.3.3"
transformers = "^4.33.3"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
